# AI-Assist-Framework

./: .gitignore  CMakeLists.txt  conanfile.txt  main.cpp  service.cpp  service.h
include/: service.h
src/: CMakeLists.txt  registry.cpp  registry.h  service.cpp
test/: CMakeLists.txt  main.cpp  test_main.cpp
test/Service1/: CMakeLists.txt  main.cpp
test/Service2/: CMakeLists.txt  main.cpp
